[gd_scene load_steps=7 format=2]

[ext_resource path="res://CircleAttackDecal.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 1, 0.329412, 0.329412, 0.705882 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
height = 0.01

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.662745, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
height = 0.01

[sub_resource type="CylinderShape" id=5]
height = 0.690709

[node name="CircleAttackDecal" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="Charge" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
cast_shadow = 0
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = null
__meta__ = {
"_editor_description_": ""
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area" parent="."]
collision_layer = 8
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.387206, 0 )
shape = SubResource( 5 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
